--- a/src/components/ControlledForm/controlledForm.css
+++ b/src/components/ControlledForm/controlledForm.css
@@ -10,6 +10,11 @@
 
 }
 
+.form-title {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
 .name {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
